[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GUI.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/GUI/container_background.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/btn_forward.png" type="Texture" id=6]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -540.0
margin_bottom = 137.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 540.0
margin_bottom = 137.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 74.0
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="HBoxLeft" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NinePatchRect"]
anchor_bottom = 1.0
margin_left = 15.0
margin_right = 307.0

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect/HBoxLeft"]
margin_top = 23.0
margin_right = 53.0
margin_bottom = 51.0
text = "Score"

[node name="ScoreProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/NinePatchRect/HBoxLeft"]
margin_left = 57.0
margin_top = 17.0
margin_right = 305.0
margin_bottom = 57.0
size_flags_vertical = 4
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="HBoxRight" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -141.0
margin_right = -14.0
alignment = 2

[node name="ScoreValue" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect/HBoxRight"]
margin_left = 32.0
margin_top = 23.0
margin_right = 46.0
margin_bottom = 51.0
text = "0"

[node name="ScoreSep" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect/HBoxRight"]
margin_left = 50.0
margin_top = 23.0
margin_right = 58.0
margin_bottom = 51.0
text = "/"

[node name="ScoreMax" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect/HBoxRight"]
margin_left = 62.0
margin_top = 23.0
margin_right = 127.0
margin_bottom = 51.0
text = "10000"

[node name="EndButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_left = 482.0
margin_top = 78.0
margin_right = 540.0
margin_bottom = 137.0
size_flags_horizontal = 8
texture_normal = ExtResource( 6 )

[node name="TweenScore" type="Tween" parent="."]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EndButton" to="." method="_on_EndButton_pressed"]
